--- a/alarmAppNew/Info.plist
+++ b/alarmAppNew/Info.plist
@@ -4,5 +4,9 @@
 <dict>
 	<key>NSUserNotificationUsageDescription</key>
 	<string>This app needs notification permission to deliver reliable alarm notifications that will wake you up at the scheduled time.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
