--- a/alarmAppNew/Info.plist
+++ b/alarmAppNew/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSUserNotificationUsageDescription</key>
 	<string>This app needs notification permission to deliver reliable alarm notifications that will wake you up at the scheduled time.</string>
+	<key>NSAlarmKitUsageDescription</key>
+	<string>This app needs alarm access to schedule reliable wake-up alarms with challenges that ensure you're fully awake.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
